# imxrt1064-rs-testbed

./: Cargo.toml  LICENSE  README.md  jlink.gdb  jlink_gdb.sh  memory.x  objdump.sh
.cargo/: config.toml
src/: main.rs
